# PSEProject

./: README.md  Test_Model  main.py  network_modifier_error_summary.txt  pyproject.toml  resources.qrc
algorithms/: crown_autolirpa.py
controller/input_manager/: network_view_controller.py  plot_view_controller.py
model/data/: plot_generation_config.py
model/data_loader/: neural_network_loader.py
src/nn_verification_visualisation/: Test_Model  __main__.py  main.py  resources_rc.py  style.qss
src/nn_verification_visualisation/controller/input_manager/: network_view_controller.py  plot_config_dialog_controller.py  plot_view_controller.py
src/nn_verification_visualisation/controller/process_manager/: algorithm_executor.py  network_modifier.py  sample_runner.py
src/nn_verification_visualisation/model/data/: diagram_config.py  input_bounds.py  network_verification_config.py  plot_generation_config.py  save_state.py  storage.py
src/nn_verification_visualisation/model/data_exporter/: image_exporter.py  plot_exporter.py  save_state_exporter.py
src/nn_verification_visualisation/model/data_loader/: algorithm_file_observer.py  algorithm_loader.py  input_bounds_loader.py  neural_network_loader.py  plot_loader.py  save_state_loader.py
src/nn_verification_visualisation/view/base_view/: action_menu.py  base_view.py  bounds_display.py  color_manager.py  insert_view.py  main_window.py  tab.py  (+2 more)
tests/view/base_view/: test_main.py
view/base_view/: base_view.py  insert_view.py  main_window.py  tabs.py
view/network_view/: network_view.py
view/plot_view/: plot_view.py
(+20 files in other folders)
