[project]
name = "my-project"

dynamic = ["version"]

dependencies = [
  "pyside6 >= 6.10.1",
  "onnx >= 1.20.1",
  "numpy >= 2.4.1",
  "matplotlib >= 3.10.8"
]

requires-python = ">=3.9"

description = ""
readme = "README.md"

authors = [
  {name = "Pradyun Gedam", email = "pradyun@example.com"},
  {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
  {name = "Another person"},
  {email = "different.person@example.com"},
]
